--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="./style.css" />
     </head>
     <body>
+        <h1>Danh sách sản phẩm</h1>
         <div class="todo"></div>
     </body>
     <script src="main.js"></script>
