--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <h1>Danh sách sản phẩm</h1>
-        <div class="todo"></div>
+        <div class="product-list"></div>
     </body>
     <script src="main.js"></script>
 </html>
