--- a/detail.html
+++ b/detail.html
@@ -4,8 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Document</title>
+        <link rel="stylesheet" href="./detail.css" />
     </head>
     <body>
+        <button class="btn-detail"><a href="./index.html">Back</a></button>
         <h1>Chi tiết sản phẩn</h1>
         <div class="product-detail"></div>
     </body>
